# sarjana

./: .gitignore  .nojekyll  CHANGELOG.md  FRB20190915D-LS-power.npy  FRB20190915D-PDM-power.npy  FRB20190915D-PF-power.npy  FRB20190915D-duty-cycle.csv  FRB20190915D-lomb-scargle.csv  FRB20191106C-LS-power.npy  FRB20191106C-PDM-power.npy  FRB20191106C-PDM.csv  FRB20191106C-PF-power.npy  FRB20191106C-duty-cycle.csv  FRB20191106C-lomb-scargle.csv  README.html  README.md  _quarto.yml  _twocolumn_longtable.tex  about.html  about.qmd  catalog.txt  cleanrefs.bat  countperday.py  freq-grid.npy  index.html  index.qmd  justfile  listings.json  periodogram.py  phasefolded.py  pyproject.toml  repeaters.aux  repeaters.docx  repeaters.html  repeaters.qmd  requirements.txt  robots.txt  search.json  sitemap.xml  waiting.py
.github/workflows/: pages.yml
_partials/: before-body.tex  title.tex
_templates/: template.docx  template.tex
binnew/: FRB20180916B_subwindows_periods.py  eval_composite_periodogram.py  exposure_err.py  func_exposure.py  get_exposure.py  ngrid2.csv  pipelines.nu  plot_composite_periodogram_many.py  plot_composite_periodogram_single.py  plot_composite_periodogram_subwindows.py  plot_metric_example.py  plot_periodogram_stack.py  plot_periodogram_stack_pcc.py  plot_phasefold.py  plot_phasefold_many.py  plot_summary.py  pyproject.toml  query_exposure.py  sample.filtered.txt  scatter.py  table.tex  test.py
catalog/: eval_parameters.py  eval_umap_hdbscan.py
data/: FRB20180916B-LS-power.npy  FRB20180916B-PDM.csv  FRB20190915D-LS-power.npy  FRB20190915D-PDM.csv  FRB20190915D-countperday.csv  FRB20190915D-duty-cycle copy.csv  FRB20190915D-duty-cycle.csv  FRB20191106C-LS-power.npy  FRB20191106C-PDM.csv  FRB20191106C-PF-power.npy  FRB20191106C-duty-cycle.csv  FRB20191106C-lomb-scargle.csv  freq-grid.npy  workflow_log.json
data/meta/: milestones.csv  progress-1y.csv  progress-got.csv  schedule-2sem.csv  schedule-4sem.csv
data/raw/: CHIME_FRB_ML_classification.README.md  CHIME_FRB_ML_classification.csv  bingli2019.csv  chimefrbcat1_Hashimoto_2022.README.md
diagnostics/: find_repeater_events.py  plot_properties.py  plot_properties_folded.py  plot_waterfall.py  plot_waterfall_many.py
docs/: _quarto-litreview.yml  _quarto-proposal.yml  _quarto-thesis.yml  _quarto-web.yml  _quarto.yml  about.qmd  index-thesis.qmd  index.qmd
docs/_common/: references.bib
docs/notebooks/: .16-repeaters-morphology.tmp.ipynb  06-repeaters-and-non-repeaters-statisticaly-similar-ensembles.ipynb  08-chime-open-data.ipynb  (+19 more)
librs/: Cargo.toml  pyproject.toml
librs/python/librs/: __init__.py
librs/src/: lib.rs
main/: FRB20180916B_subwindows_periods.csv  README.md  download_exposures.py  eval_composite_periodogram.py  eval_exposure_err.py  get_exposure.py  ngrid0.5.csv  ngrid2.csv  ngrid3.csv  pipelines.nu  plot_FRB20180916B_subwindows_periods.py  plot_composite_periodogram_many.py  plot_composite_periodogram_single.py  plot_composite_periodogram_subwindows.py  plot_metric_example.py  plot_periodogram_stack.py  plot_periodogram_stack_pcc.py  plot_phasefold.py  plot_phasefold_many.py  plot_summary.py  pyproject.toml  sample.filtered.txt  sample.txt  scatter.py  table.tex
notebooks/: 01-filter-telescope.html  01-filter-telescope.ipynb  01-get-data.html  01-get-data.ipynb  02-UMAP-HDBSCAN.html  02-UMAP-HDBSCAN.ipynb  03-filter-repeaters.html  03-filter-repeaters.ipynb  03-redshift-via-DM.html  03-redshift-via-DM.ipynb  04-UMAP-HDBSCAN-reduced-params.html  04-UMAP-HDBSCAN-reduced-params.ipynb  05-calculate-params.html  05-calculate-params.ipynb  06-repeaters-and-non-repeaters-statisticaly-similar-ensembles.html  06-repeaters-and-non-repeaters-statisticaly-similar-ensembles.ipynb  07-classification-mechanism.html  07-classification-mechanism.ipynb  07-post-HDBSCAN-statistics.html  08-chime-open-data.html  08-chime-open-data.ipynb  09-identifying-type-i-and-ii.html  10-dataframe.html  _metadata.yml  compare_dataformat.txt
revmodphys/: main.aux  main.blg  main.dvi  main.out
sarjana/: collections.py  commands.py  datahandlers.py  download.py  gantt.py  handlers.py  main.py  optimize.py  plotting.py  preamble.py  signal.py  tui.py
scripts/: FRB20180916B_subwindows_periods.csv  FRB20180916B_subwindows_periods.py  README.md  download_exposures.py  eval_composite_periodogram.py  exposure_err.py  gantt.py  get_exposure.py  ngrid0.5.csv  ngrid3.csv  plot_composite_periodogram_many.py  plot_composite_periodogram_single.py  plot_composite_periodogram_subwindows.py  plot_periodogram_stack.py  plot_phasefold.py  plot_summary.py  pyproject.toml  sample.txt  scatter.py
src/: __init__.py  learning.py  main.py  metrics.py  paths.py  scan.py  transients.py  utils.py  workflows.py
subpackages/chimefrb/: README.md  pyproject.toml
subpackages/chimefrb/src/chimefrb/: __init__.py
subpackages/use-presto/: --pyproject.toml  -pyproject.toml  README.md  pyproject.toml
subpackages/use-presto/src/use-presto/: __init__.py
subpackages/use-presto/src/use_presto.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
subpackages/use-presto/tests/: dedisp.py  test_binary_calcs.py  test_max_rzw_harmonics.py  test_presto_python.py
subpackages/use-presto/tests/python/: cvec.py
test/: choose.ipynb  lightcurve.ipynb
thesis/: 05-calculate-params.ipynb  _metadata.yml  _quarto-litreview.yml  _quarto-proposal.yml  _quarto.yml  chime-frb.qmd  classification.qmd  classifications.qmd  include-subchapters.lua  index.aux  index.html  index.ist  index.qmd  index.tex  literature.html  literature.qmd  methodology.html  methodology.qmd  population.qmd  problems.qmd  properties.qmd  references.bib  references.html  references.qmd
userust/: Cargo.toml  README.md  main.py  main2.py  pyproject.toml
userust/python/scripts/diagnostics/: phasefold.py
userust/python/scripts/ensemble/: __init__.py  generate.py  plot.py
userust/python/userust/: __init__.py
userust/src/: args.rs  diagnostic.rs  ensemble.rs  experiment.rs  exposure.rs  lib.rs  periodogram.rs  python.rs  transient.rs
userust/src/transient/: chime.rs
(+144 files in other folders)
