[tool.poetry]
name = "sarjana"
version = "0.1.0"
description = ""
authors = ["Thaza_Kun <61819672+Thaza-Kun@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
rich = "^13.5.2"
typer = "^0.9.0"
pandas = "^2.1.0"
numpy = "^1.25.2"
astropy = "^5.3.3"
pyarrow = "^13.0.0"
seaborn = "^0.12.2"
matplotlib = "^3.8.0"
pypdm = "^1.1"
py-pdm = "^0.6.0"
scipy = "^1.11.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
