[project]
name = "binnew"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Thaza_Kun", email = "61819672+Thaza-Kun@users.noreply.github.com" }]
dependencies = ["astropy>=5.2.2", "seaborn>=0.13.2", "tqdm>=4.66.2", "numba>=0.58.1", "scipy>=1.10.1", "matplotlib>=3.7.5", "pandas>=2.0.3", "userust @ file:///D:/home/kerja/sarjana/binnew/../userust", "requests>=2.32.3", "rich>=13.7.1", "findiff>=0.10.0", "cdshealpix>=0.6.5"]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "bin:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bin"]
