[package]
name = "userust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "userust"
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
pyo3 = "0.21"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
serde = { version = "1.0.200", features = ["derive"] }
serde-pickle = "1.1.1"
tqdm = "0.7.0"
which = "6.0.1"
