[package]
name = "userust"
version = "0.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "userust"
crate-type = ["cdylib", "lib"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
ctrlc = "3.4.4"
indicatif = { version = "0.17.8", features = ["rayon"] }
itertools = "0.13.0"
kdam = { version = "0.5.1", features = ["rayon"] }
ndarray = { version = "0.15.6", features = ["rayon"] }
npy = "0.4.0"
npyz = { version = "0.8.3", features = ["npz"] }
numpy = "0.21.0"
pyo3 = "0.21"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
rayon = "1.10.0"
serde = { version = "1.0.200", features = ["derive"] }
serde-pickle = "1.1.1"
tqdm = "0.7.0"
which = "6.0.1"
zip = "2.2.1"

[features]
pyargs = []
