[project]
name = "chimefrb"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "pandas>=2.2.1",
    "numpy>=1.26.4",
    "pyarrow>=15.0.1",
    "astropy>=6.0.0",
    "matplotlib>=3.8.3",
    "PySide2>=5.13.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chimefrb"]
