[tool.poetry]
name = "use-presto"
version = "0.1.0"
description = ""
authors = ["Thaza_Kun"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.7.9"
presto = {git = "https://github.com/scottransom/presto.git"}
pySLALIB = "1.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
